openssl (0.9.8c-4etch6) oldstable-security; urgency=low

  * Fix "DTLS record buffer limitation bug." (CVE-2009-1377)

 -- Kurt Roeckx <kurt@roeckx.be>  Mon, 01 Jun 2009 15:32:47 +0200

openssl (0.9.8c-4etch5) oldstable-security; urgency=low

  * Properly validate the length of an encoded BMPString and UniversalString
    (CVE-2009-0590)

 -- Kurt Roeckx <kurt@roeckx.be>  Wed, 01 Apr 2009 21:49:42 +0200

openssl (0.9.8c-4etch4) stable-security; urgency=low

  * Internal calls to didn't properly check for errors which
    resulted in malformed DSA and ECDSA signatures being treated as
    a good signature rather than as an error.  (CVE-2008-5077)
  * ipv6_from_asc() could write 1 byte longer than the buffer in case
    the ipv6 address didn't have "::" part.

 -- Kurt Roeckx <kurt@roeckx.be>  Mon, 05 Jan 2009 00:20:10 +0100

openssl (0.9.8c-4etch3) stable-security; urgency=high

  * Re-introducing seeding of the random number generator.  Patch from the
    maintainer.

 -- Florian Weimer <fw@deneb.enyo.de>  Thu, 08 May 2008 01:58:40 +0200

openssl (0.9.8c-4etch2) proposed-updates; urgency=low

  * Apply patch from SuSe for CVE-2007-4995.  This should also
    get DTLS in a working state.
  * Fix CVE-2007-3108 wrong Montgomery multiplication.  This was
    also included in the patch from SuSe.  (Closes: #438142)

 -- Kurt Roeckx <kurt@roeckx.be>  Sun, 06 Apr 2008 16:31:28 +0200

openssl (0.9.8c-4etch1) stable-security; urgency=low

  * CVE-2007-5135: Fix off by one error in SSL_get_shared_ciphers().
    (Closes: #444435)
  * Add nagios-nrpe-server, clamav-freshclam and clamav-daemon
    to the list of services to check for restart.

 -- Kurt Roeckx <kurt@roeckx.be>  Fri, 28 Sep 2007 19:57:00 +0200

openssl (0.9.8c-4) unstable; urgency=low

  * Add German debconf translation.  Thanks to
    Johannes Starosta <feedback-an-johannes@arcor.de> (Closes: #388108)
  * Make c_rehash look for both .pem and .crt files.  Also make it support